@@ -1,3 +1,8 @@
+2017-11-20         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* nl_langinfo.c (do_nl_langinfo): Update to gawk 4.2 API.
+	(func_table): Same.
+
 2017-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* packaging/gawk-nl_langinfo.spec.in: Change email address in changelog.
